crates/cli/tests/snapshots/dep_graph_test__all_by_default.snap
---
source: crates/cli/tests/dep_graph_test.rs
assertion_line: 13
expression: get_assert_output(&assert)
---
digraph {
    0 [ label="SetupNodeTool(16.0.0)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    1 [ label="InstallNodeDeps(16.0.0)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    2 [ label="SyncNodeProject(basic)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    3 [ label="RunTarget(basic:build)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    4 [ label="RunTarget(basic:lint)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    5 [ label="RunTarget(basic:standard)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    6 [ label="RunTarget(basic:test)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    7 [ label="RunTarget(basic:withArgs)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    8 [ label="RunTarget(basic:withInputs)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    9 [ label="RunTarget(basic:withOutputs)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    10 [ label="SyncNodeProject(buildA)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    11 [ label="SyncNodeProject(buildC)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    12 [ label="RunTarget(buildA:build)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    13 [ label="RunTarget(buildC:build)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    14 [ label="RunTarget(buildA:standard)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    15 [ label="RunTarget(buildA:withArgs)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    16 [ label="RunTarget(buildA:withInputs)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    17 [ label="RunTarget(buildA:withOutputs)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    18 [ label="SyncNodeProject(buildB)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    19 [ label="RunTarget(buildB:build)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    20 [ label="RunTarget(buildB:standard)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    21 [ label="RunTarget(buildB:withArgs)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    22 [ label="RunTarget(buildB:withInputs)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    23 [ label="RunTarget(buildB:withOutputs)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    24 [ label="RunTarget(buildC:standard)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    25 [ label="RunTarget(buildC:withArgs)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    26 [ label="RunTarget(buildC:withInputs)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    27 [ label="RunTarget(buildC:withOutputs)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    28 [ label="SyncNodeProject(chain)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    29 [ label="RunTarget(chain:a)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    30 [ label="RunTarget(chain:b)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    31 [ label="RunTarget(chain:c)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    32 [ label="RunTarget(chain:d)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    33 [ label="RunTarget(chain:e)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    34 [ label="RunTarget(chain:f)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    35 [ label="RunTarget(chain:standard)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    36 [ label="RunTarget(chain:withArgs)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    37 [ label="RunTarget(chain:withInputs)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    38 [ label="RunTarget(chain:withOutputs)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    39 [ label="SyncNodeProject(cycle)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    40 [ label="RunTarget(cycle:a)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    41 [ label="RunTarget(cycle:b)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    42 [ label="RunTarget(cycle:c)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    43 [ label="RunTarget(cycle:standard)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    44 [ label="RunTarget(cycle:withArgs)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    45 [ label="RunTarget(cycle:withInputs)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    46 [ label="RunTarget(cycle:withOutputs)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    47 [ label="SyncNodeProject(inputA)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    48 [ label="RunTarget(inputA:a)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    49 [ label="RunTarget(inputA:a2)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    50 [ label="RunTarget(inputA:standard)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    51 [ label="RunTarget(inputA:withArgs)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    52 [ label="RunTarget(inputA:withInputs)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    53 [ label="RunTarget(inputA:withOutputs)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    54 [ label="SyncNodeProject(inputB)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    55 [ label="RunTarget(inputB:b)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    56 [ label="RunTarget(inputB:b2)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    57 [ label="RunTarget(inputB:standard)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    58 [ label="RunTarget(inputB:withArgs)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    59 [ label="RunTarget(inputB:withInputs)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    60 [ label="RunTarget(inputB:withOutputs)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    61 [ label="SyncNodeProject(inputC)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    62 [ label="RunTarget(inputC:c)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    63 [ label="RunTarget(inputC:standard)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    64 [ label="RunTarget(inputC:withArgs)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    65 [ label="RunTarget(inputC:withInputs)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    66 [ label="RunTarget(inputC:withOutputs)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    67 [ label="SetupSystemTool" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    68 [ label="InstallSystemDeps" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    69 [ label="SyncSystemProject(mergeAllStrategies)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    70 [ label="RunTarget(mergeAllStrategies:standard)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    71 [ label="RunTarget(mergeAllStrategies:withArgs)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    72 [ label="RunTarget(mergeAllStrategies:withInputs)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    73 [ label="RunTarget(mergeAllStrategies:withOutputs)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    74 [ label="SyncSystemProject(mergeAppend)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    75 [ label="RunTarget(mergeAppend:standard)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    76 [ label="RunTarget(mergeAppend:withArgs)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    77 [ label="RunTarget(mergeAppend:withInputs)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    78 [ label="RunTarget(mergeAppend:withOutputs)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    79 [ label="SyncSystemProject(mergePrepend)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    80 [ label="RunTarget(mergePrepend:standard)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    81 [ label="RunTarget(mergePrepend:withArgs)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    82 [ label="RunTarget(mergePrepend:withInputs)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    83 [ label="RunTarget(mergePrepend:withOutputs)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    84 [ label="SyncSystemProject(mergeReplace)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    85 [ label="RunTarget(mergeReplace:standard)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    86 [ label="RunTarget(mergeReplace:withArgs)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    87 [ label="RunTarget(mergeReplace:withInputs)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    88 [ label="RunTarget(mergeReplace:withOutputs)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    89 [ label="SyncNodeProject(noTasks)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    90 [ label="RunTarget(noTasks:standard)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    91 [ label="RunTarget(noTasks:withArgs)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    92 [ label="RunTarget(noTasks:withInputs)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    93 [ label="RunTarget(noTasks:withOutputs)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    1 -> 0 [ arrowhead=box, arrowtail=box]
    2 -> 0 [ arrowhead=box, arrowtail=box]
    3 -> 1 [ arrowhead=box, arrowtail=box]
    3 -> 2 [ arrowhead=box, arrowtail=box]
    4 -> 1 [ arrowhead=box, arrowtail=box]
    4 -> 2 [ arrowhead=box, arrowtail=box]
    5 -> 1 [ arrowhead=box, arrowtail=box]
    5 -> 2 [ arrowhead=box, arrowtail=box]
    6 -> 1 [ arrowhead=box, arrowtail=box]
    6 -> 2 [ arrowhead=box, arrowtail=box]
    7 -> 1 [ arrowhead=box, arrowtail=box]
    7 -> 2 [ arrowhead=box, arrowtail=box]
    8 -> 1 [ arrowhead=box, arrowtail=box]
    8 -> 2 [ arrowhead=box, arrowtail=box]
    9 -> 1 [ arrowhead=box, arrowtail=box]
    9 -> 2 [ arrowhead=box, arrowtail=box]
    10 -> 0 [ arrowhead=box, arrowtail=box]
    11 -> 0 [ arrowhead=box, arrowtail=box]
    10 -> 11 [ arrowhead=box, arrowtail=box]
    10 -> 2 [ arrowhead=box, arrowtail=box]
    12 -> 1 [ arrowhead=box, arrowtail=box]
    12 -> 10 [ arrowhead=box, arrowtail=box]
    12 -> 3 [ arrowhead=box, arrowtail=box]
    13 -> 1 [ arrowhead=box, arrowtail=box]
    13 -> 11 [ arrowhead=box, arrowtail=box]
    12 -> 13 [ arrowhead=box, arrowtail=box]
    14 -> 1 [ arrowhead=box, arrowtail=box]
    14 -> 10 [ arrowhead=box, arrowtail=box]
    15 -> 1 [ arrowhead=box, arrowtail=box]
    15 -> 10 [ arrowhead=box, arrowtail=box]
    16 -> 1 [ arrowhead=box, arrowtail=box]
    16 -> 10 [ arrowhead=box, arrowtail=box]
    17 -> 1 [ arrowhead=box, arrowtail=box]
    17 -> 10 [ arrowhead=box, arrowtail=box]
    18 -> 0 [ arrowhead=box, arrowtail=box]
    19 -> 1 [ arrowhead=box, arrowtail=box]
    19 -> 18 [ arrowhead=box, arrowtail=box]
    20 -> 1 [ arrowhead=box, arrowtail=box]
    20 -> 18 [ arrowhead=box, arrowtail=box]
    21 -> 1 [ arrowhead=box, arrowtail=box]
    21 -> 18 [ arrowhead=box, arrowtail=box]
    22 -> 1 [ arrowhead=box, arrowtail=box]
    22 -> 18 [ arrowhead=box, arrowtail=box]
    23 -> 1 [ arrowhead=box, arrowtail=box]
    23 -> 18 [ arrowhead=box, arrowtail=box]
    24 -> 1 [ arrowhead=box, arrowtail=box]
    24 -> 11 [ arrowhead=box, arrowtail=box]
    25 -> 1 [ arrowhead=box, arrowtail=box]
    25 -> 11 [ arrowhead=box, arrowtail=box]
    26 -> 1 [ arrowhead=box, arrowtail=box]
    26 -> 11 [ arrowhead=box, arrowtail=box]
    27 -> 1 [ arrowhead=box, arrowtail=box]
    27 -> 11 [ arrowhead=box, arrowtail=box]
    28 -> 0 [ arrowhead=box, arrowtail=box]
    29 -> 1 [ arrowhead=box, arrowtail=box]
    29 -> 28 [ arrowhead=box, arrowtail=box]
    30 -> 1 [ arrowhead=box, arrowtail=box]
    30 -> 28 [ arrowhead=box, arrowtail=box]
    31 -> 1 [ arrowhead=box, arrowtail=box]
    31 -> 28 [ arrowhead=box, arrowtail=box]
    32 -> 1 [ arrowhead=box, arrowtail=box]
    32 -> 28 [ arrowhead=box, arrowtail=box]
    33 -> 1 [ arrowhead=box, arrowtail=box]
    33 -> 28 [ arrowhead=box, arrowtail=box]
    34 -> 1 [ arrowhead=box, arrowtail=box]
    34 -> 28 [ arrowhead=box, arrowtail=box]
    33 -> 34 [ arrowhead=box, arrowtail=box]
    32 -> 33 [ arrowhead=box, arrowtail=box]
    31 -> 32 [ arrowhead=box, arrowtail=box]
    30 -> 31 [ arrowhead=box, arrowtail=box]
    29 -> 30 [ arrowhead=box, arrowtail=box]
    35 -> 1 [ arrowhead=box, arrowtail=box]
    35 -> 28 [ arrowhead=box, arrowtail=box]
    36 -> 1 [ arrowhead=box, arrowtail=box]
    36 -> 28 [ arrowhead=box, arrowtail=box]
    37 -> 1 [ arrowhead=box, arrowtail=box]
    37 -> 28 [ arrowhead=box, arrowtail=box]
    38 -> 1 [ arrowhead=box, arrowtail=box]
    38 -> 28 [ arrowhead=box, arrowtail=box]
    39 -> 0 [ arrowhead=box, arrowtail=box]
    40 -> 1 [ arrowhead=box, arrowtail=box]
    40 -> 39 [ arrowhead=box, arrowtail=box]
    41 -> 1 [ arrowhead=box, arrowtail=box]
    41 -> 39 [ arrowhead=box, arrowtail=box]
    42 -> 1 [ arrowhead=box, arrowtail=box]
    42 -> 39 [ arrowhead=box, arrowtail=box]
    42 -> 40 [ arrowhead=box, arrowtail=box]
    41 -> 42 [ arrowhead=box, arrowtail=box]
    40 -> 41 [ arrowhead=box, arrowtail=box]
    43 -> 1 [ arrowhead=box, arrowtail=box]
    43 -> 39 [ arrowhead=box, arrowtail=box]
    44 -> 1 [ arrowhead=box, arrowtail=box]
    44 -> 39 [ arrowhead=box, arrowtail=box]
    45 -> 1 [ arrowhead=box, arrowtail=box]
    45 -> 39 [ arrowhead=box, arrowtail=box]
    46 -> 1 [ arrowhead=box, arrowtail=box]
    46 -> 39 [ arrowhead=box, arrowtail=box]
    47 -> 0 [ arrowhead=box, arrowtail=box]
    48 -> 1 [ arrowhead=box, arrowtail=box]
    48 -> 47 [ arrowhead=box, arrowtail=box]
    49 -> 1 [ arrowhead=box, arrowtail=box]
    49 -> 47 [ arrowhead=box, arrowtail=box]
    50 -> 1 [ arrowhead=box, arrowtail=box]
    50 -> 47 [ arrowhead=box, arrowtail=box]
    51 -> 1 [ arrowhead=box, arrowtail=box]
    51 -> 47 [ arrowhead=box, arrowtail=box]
    52 -> 1 [ arrowhead=box, arrowtail=box]
    52 -> 47 [ arrowhead=box, arrowtail=box]
    53 -> 1 [ arrowhead=box, arrowtail=box]
    53 -> 47 [ arrowhead=box, arrowtail=box]
    54 -> 0 [ arrowhead=box, arrowtail=box]
    55 -> 1 [ arrowhead=box, arrowtail=box]
    55 -> 54 [ arrowhead=box, arrowtail=box]
    56 -> 1 [ arrowhead=box, arrowtail=box]
    56 -> 54 [ arrowhead=box, arrowtail=box]
    57 -> 1 [ arrowhead=box, arrowtail=box]
    57 -> 54 [ arrowhead=box, arrowtail=box]
    58 -> 1 [ arrowhead=box, arrowtail=box]
    58 -> 54 [ arrowhead=box, arrowtail=box]
    59 -> 1 [ arrowhead=box, arrowtail=box]
    59 -> 54 [ arrowhead=box, arrowtail=box]
    60 -> 1 [ arrowhead=box, arrowtail=box]
    60 -> 54 [ arrowhead=box, arrowtail=box]
    61 -> 0 [ arrowhead=box, arrowtail=box]
    62 -> 1 [ arrowhead=box, arrowtail=box]
    62 -> 61 [ arrowhead=box, arrowtail=box]
    63 -> 1 [ arrowhead=box, arrowtail=box]
    63 -> 61 [ arrowhead=box, arrowtail=box]
    64 -> 1 [ arrowhead=box, arrowtail=box]
    64 -> 61 [ arrowhead=box, arrowtail=box]
    65 -> 1 [ arrowhead=box, arrowtail=box]
    65 -> 61 [ arrowhead=box, arrowtail=box]
    66 -> 1 [ arrowhead=box, arrowtail=box]
    66 -> 61 [ arrowhead=box, arrowtail=box]
    68 -> 67 [ arrowhead=box, arrowtail=box]
    69 -> 67 [ arrowhead=box, arrowtail=box]
    70 -> 68 [ arrowhead=box, arrowtail=box]
    70 -> 69 [ arrowhead=box, arrowtail=box]
    70 -> 20 [ arrowhead=box, arrowtail=box]
    71 -> 68 [ arrowhead=box, arrowtail=box]
    71 -> 69 [ arrowhead=box, arrowtail=box]
    72 -> 68 [ arrowhead=box, arrowtail=box]
    72 -> 69 [ arrowhead=box, arrowtail=box]
    73 -> 68 [ arrowhead=box, arrowtail=box]
    73 -> 69 [ arrowhead=box, arrowtail=box]
    74 -> 67 [ arrowhead=box, arrowtail=box]
    75 -> 68 [ arrowhead=box, arrowtail=box]
    75 -> 74 [ arrowhead=box, arrowtail=box]
    75 -> 20 [ arrowhead=box, arrowtail=box]
    76 -> 68 [ arrowhead=box, arrowtail=box]
    76 -> 74 [ arrowhead=box, arrowtail=box]
    77 -> 68 [ arrowhead=box, arrowtail=box]
    77 -> 74 [ arrowhead=box, arrowtail=box]
    78 -> 68 [ arrowhead=box, arrowtail=box]
    78 -> 74 [ arrowhead=box, arrowtail=box]
    79 -> 67 [ arrowhead=box, arrowtail=box]
    80 -> 68 [ arrowhead=box, arrowtail=box]
    80 -> 79 [ arrowhead=box, arrowtail=box]
    80 -> 20 [ arrowhead=box, arrowtail=box]
    81 -> 68 [ arrowhead=box, arrowtail=box]
    81 -> 79 [ arrowhead=box, arrowtail=box]
    82 -> 68 [ arrowhead=box, arrowtail=box]
    82 -> 79 [ arrowhead=box, arrowtail=box]
    83 -> 68 [ arrowhead=box, arrowtail=box]
    83 -> 79 [ arrowhead=box, arrowtail=box]
    84 -> 67 [ arrowhead=box, arrowtail=box]
    85 -> 68 [ arrowhead=box, arrowtail=box]
    85 -> 84 [ arrowhead=box, arrowtail=box]
    85 -> 20 [ arrowhead=box, arrowtail=box]
    86 -> 68 [ arrowhead=box, arrowtail=box]
    86 -> 84 [ arrowhead=box, arrowtail=box]
    87 -> 68 [ arrowhead=box, arrowtail=box]
    87 -> 84 [ arrowhead=box, arrowtail=box]
    88 -> 68 [ arrowhead=box, arrowtail=box]
    88 -> 84 [ arrowhead=box, arrowtail=box]
    89 -> 0 [ arrowhead=box, arrowtail=box]
    90 -> 1 [ arrowhead=box, arrowtail=box]
    90 -> 89 [ arrowhead=box, arrowtail=box]
    91 -> 1 [ arrowhead=box, arrowtail=box]
    91 -> 89 [ arrowhead=box, arrowtail=box]
    92 -> 1 [ arrowhead=box, arrowtail=box]
    92 -> 89 [ arrowhead=box, arrowtail=box]
    93 -> 1 [ arrowhead=box, arrowtail=box]
    93 -> 89 [ arrowhead=box, arrowtail=box]
}



