crates/cli/tests/snapshots/dep_graph_test__includes_dependencies_when_focused.snap
---
source: crates/cli/tests/dep_graph_test.rs
expression: assert.output()
---
digraph {
    0 [ label="SyncWorkspace" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    1 [ label="SetupNodeTool(18.0.0)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    2 [ label="InstallNodeDeps(18.0.0)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    3 [ label="SyncNodeProject(chain)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    4 [ label="RunTarget(chain:e)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    5 [ label="RunTarget(chain:f)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    2 -> 1 [ arrowhead=box, arrowtail=box]
    3 -> 1 [ arrowhead=box, arrowtail=box]
    4 -> 2 [ arrowhead=box, arrowtail=box]
    4 -> 3 [ arrowhead=box, arrowtail=box]
    5 -> 2 [ arrowhead=box, arrowtail=box]
    5 -> 3 [ arrowhead=box, arrowtail=box]
    4 -> 5 [ arrowhead=box, arrowtail=box]
}



