crates/cli/tests/snapshots/dep_graph_test__includes_dependents_when_focused.snap
---
source: crates/cli/tests/dep_graph_test.rs
expression: assert.output()
---
digraph {
    0 [ label="SyncWorkspace" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    1 [ label="SetupNodeTool(18.0.0)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    2 [ label="InstallNodeDeps(18.0.0)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    3 [ label="SyncNodeProject(basic)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    4 [ label="RunTarget(basic:build)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    5 [ label="SyncNodeProject(buildA)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    6 [ label="SyncNodeProject(buildC)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    7 [ label="SyncNodeProject(noTasks)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    8 [ label="RunTarget(buildA:build)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    9 [ label="RunTarget(buildC:build)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    2 -> 1 [ arrowhead=box, arrowtail=box]
    3 -> 1 [ arrowhead=box, arrowtail=box]
    4 -> 2 [ arrowhead=box, arrowtail=box]
    4 -> 3 [ arrowhead=box, arrowtail=box]
    5 -> 1 [ arrowhead=box, arrowtail=box]
    5 -> 3 [ arrowhead=box, arrowtail=box]
    6 -> 1 [ arrowhead=box, arrowtail=box]
    5 -> 6 [ arrowhead=box, arrowtail=box]
    5 -> 3 [ arrowhead=box, arrowtail=box]
    7 -> 1 [ arrowhead=box, arrowtail=box]
    5 -> 7 [ arrowhead=box, arrowtail=box]
    8 -> 2 [ arrowhead=box, arrowtail=box]
    8 -> 5 [ arrowhead=box, arrowtail=box]
    9 -> 2 [ arrowhead=box, arrowtail=box]
    9 -> 6 [ arrowhead=box, arrowtail=box]
    8 -> 4 [ arrowhead=box, arrowtail=box]
    8 -> 9 [ arrowhead=box, arrowtail=box]
}



