crates/cli/tests/snapshots/dep_graph_test__outputs_json.snap
---
source: crates/cli/tests/dep_graph_test.rs
expression: assert.output()
---
{"nodes":[{"id":2,"label":"InstallNodeDeps(18.0.0)"},{"id":4,"label":"RunTarget(basic:lint)"},{"id":1,"label":"SetupNodeTool(18.0.0)"},{"id":3,"label":"SyncNodeProject(basic)"}],"edges":[{"id":"2 -> 1","source":2,"target":1},{"id":"3 -> 1","source":3,"target":1},{"id":"4 -> 2","source":4,"target":2},{"id":"4 -> 3","source":4,"target":3}]}


